tests/workflows/tests/snapshots/install_source_analysis__audit_targeted_source_evidence@destructive-filesystem.snap
---
source: tests/workflows/tests/install_source_analysis.rs
expression: envelope
---
{
  "success": true,
  "behavioral_coverage": {
    "complete": true,
    "scanned_packages": 1,
    "partial_packages": 0,
    "unavailable_packages": 0,
    "packages": []
  },
  "manager": "lpm",
  "degraded": false,
  "osv_degraded": false,
  "osv_degraded_reason": null,
  "scanned": 1,
  "checked_lpm": 0,
  "packages_with_issues": 1,
  "total_issues": 2,
  "total_capabilities": 1,
  "osv_vulnerabilities": 0,
  "counts": {
    "critical": 1,
    "high": 0,
    "moderate": 0,
    "low": 0,
    "info": 1
  },
  "packages": [
    {
      "name": "targeted-source-control",
      "version": "1.0.0",
      "instance_id": "[INSTANCE_ID]",
      "path": "[PACKAGE_PATH]",
      "quality_score": null,
      "capabilities": [
        {
          "rule_id": "fs",
          "name": "filesystem access",
          "policy_severity": "info",
          "source": "local",
          "evidence": [
            {
              "ruleId": "fs",
              "path": "index.js",
              "line": 1,
              "column": 10,
              "excerpt": "const fs=require('fs'),os=require('os');fs.rmSync(os.homedir(),{recursive:true});",
              "reason": "Source pattern indicates a capability; execution is not established.",
              "fileContext": "source"
            }
          ]
        }
      ],
      "issues": [
        {
          "severity": "info",
          "category": "supply-chain",
          "message": "trivial package",
          "source": "local",
          "rule_id": "trivial",
          "evidence": []
        },
        {
          "severity": "critical",
          "category": "supply-chain",
          "message": "broad filesystem deletion",
          "source": "local",
          "rule_id": "destructive-filesystem",
          "evidence": [
            {
              "ruleId": "destructive-filesystem",
              "path": "index.js",
              "line": 1,
              "column": 41,
              "excerpt": "const fs=require('fs'),os=require('os');fs.rmSync(os.homedir(),{recursive:true});",
              "reason": "A recursive filesystem removal targets the home directory, a filesystem root, or current project contents.",
              "fileContext": "source"
            }
          ]
        }
      ]
    }
  ],
  "vulnerabilities": []
}
